--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.12.3",
+    "nodemon": "^1.3.7"
+  },
+  "devDependencies": {
     "babel-core": "^5.0.10",
     "babel-loader": "^5.0.0",
     "jsonp": "^0.2.0",
