--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "main": "webpack.config.js",
   "author": "Eduardo Rabelo <oieduardorabelo@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "dev": "./node_modules/webpack/bin/webpack.js --watch & ./node_modules/nodemon/bin/nodemon.js _dist/app.output.js"
+  },
   "dependencies": {
     "express": "^4.12.3",
     "nodemon": "^1.3.7"
