--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
   "author": "Eduardo Rabelo <oieduardorabelo@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "./node_modules/webpack/bin/webpack.js --watch & ./node_modules/nodemon/bin/nodemon.js _dist/app.output.js"
+    "dev": "webpack.js --watch & nodemon _dist/app.output.js"
   },
   "dependencies": {
     "express": "^4.12.3",
-    "nodemon": "^1.3.7"
+    "jsonp": "^0.2.0",
   },
   "devDependencies": {
     "babel-core": "^5.0.10",
     "babel-loader": "^5.0.0",
-    "jsonp": "^0.2.0",
     "source-map-support": "^0.2.10",
     "webpack": "^1.8.1"
   }
