--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "express": "^4.12.3",
-    "jsonp": "^0.2.0",
+    "jsonp": "^0.2.0"
   },
   "devDependencies": {
     "babel-core": "^5.0.10",
