--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Eduardo Rabelo <oieduardorabelo@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "webpack.js --watch & nodemon _dist/app.output.js"
+    "dev": "webpack.js --watch & nodemon _dist/app.output.js",
+    "test": "eslint ./es6/"
   },
   "dependencies": {
     "express": "^4.12.3",
