--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "parser": "babel-eslint",
   "rules": {
     "eol-last": [0],
-    "new-cap": [0],
+    // "new-cap": [0],
     "no-console": [0],
     "no-mixed-requires": [0],
     "no-shadow": [0],
