--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "start": "./node_modules/.bin/webpack --watch & ./node_modules/.bin/nodemon _dist/app.output.js",
-    "test": "eslint ./es6/"
+    "test": "./node_modules/.bin/eslint ./es6/"
   },
   "dependencies": {
     "express": "^4.12.3",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "babel-core": "^5.0.10",
     "babel-loader": "^5.0.0",
+    "eslint": "^0.19.0",
     "nodemon": "^1.3.7",
     "source-map-support": "^0.2.10",
     "webpack": "^1.8.1"
