--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "babel-core": "^5.0.10",
+    "babel-eslint": "^3.0.1",
     "babel-loader": "^5.0.0",
     "eslint": "^0.19.0",
     "nodemon": "^1.3.7",
