--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "./node_modules/.bin/eslint ./es6/"
   },
   "dependencies": {
+    "ejs": "^2.3.1",
     "express": "^4.12.3",
     "jsonp": "^0.2.0"
   },
