--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   "rules": {
     "comma-spacing": [2, {"before": false, "after": true}],
     "eol-last": [2],
+    "new-cap": [0],
     "no-console": [0],
     "no-mixed-requires": [2],
     "no-multiple-empty-lines": [2, { "max": 2 }],
